test/src/e2e_vm_tests/test_programs/should_fail/return_path_analysis/src/main.sw
script;

// Shows that https://github.com/FuelLabs/sway/issues/6369 has been resolved.
//
// The depth of the return path analysis was limited to 50, which meant that anything could be
// returned after 50 blocks.

fn f() -> bool {
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };
    if true {
	return true;
    } else {
	return false;
    };

    // Not a bool - should not be allowed
    return 42 
}

fn main() {
    let _ = f();
}
